Fix align social icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ body .background__ {
 .hero__social {
   width: 80%;
   height: 100px;
-  margin-top: 50px;
+  margin: 50px 0px;
   z-index: 1;
   -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
